--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.3
   mocktail: ^0.1.4
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
