--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   equatable: ^2.0.3
   mocktail: ^0.1.4
   http: ^0.13.3
+  flutter_bloc: ^7.0.1
 
 dev_dependencies:
   flutter_test:
