--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.3
   flutter_bloc: ^7.0.1
   bloc_test: ^8.0.2
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
